# oz_03_collabo-003-BE

./: .gitignore  README.md  deploy.sh  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  wait-for-it.sh
.github/workflows/: Django_CD.yml  Django_CI.yml  Django_CICD.yml  Djnago_CI.yml  django_ci.yml  django_server_test.yml
allthe/: manage.py
allthe/accounts/: authentication.py  authentication.py  managers.py  models.py  serializers.py  urls.py  views.py
allthe/accounts/migrations/: 0001_initial.py  0002_remove_user_provider_user_business_number_and_more.py  0002_verificationcode_alter_user_options_user_nickname_and_more.py  0003_alter_user_nickname.py  0003_user_phone_number.py  0004_remove_user_unique_nickname_remove_user_nickname.py
allthe/accounts/templates/: callback.html  create_payment.html  logout.html  password_reset_email.html  signup.html
allthe/admin_panel/: models.py
allthe/admin_panel/migrations/: 0001_initial.py
allthe/allthe/: asgi.py  settings.py  urls.py  wsgi.py
allthe/analysis/: models.py  serializers.py  urls.py  views.py
allthe/analysis/migrations/: 0001_initial.py  0002_initial.py  (+7 more)
allthe/category/: admin.py  models.py  serializers.py  urls.py  views.py
allthe/common/: decorators.py
allthe/contents/: models.py  serializers.py  urls.py  views.py
allthe/payments/: models.py  serializers.py  urls.py  views.py
app-1/accounts/: serializers.py
app-1/app/: urls.py
app/accounts/: apps.py  forms.py  managers.py  middleware.py  models.py  serializers.py  urls.py  views.py
app/app/: settings.py  urls.py
(+16 files in other folders)
